--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
     "axios": "^0.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "remixicon": "^2.1.0",
     "styled-components": "^4.4.1",
