--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.4.1",
     "axios": "^0.19.1",
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
     "remixicon": "^2.1.0",
     "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
